--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Megatram
-spring.datasource.url=jdbc:mysql://localhost:3306/stockdb`   
+spring.datasource.url=jdbc:mysql://localhost:3306/stockdb
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
